--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -3,7 +3,7 @@
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}">
   <script src="{{ url_for('static', filename='js/gallery.js') }}" type="text/javascript"></script>
-  {% if pixelated %}
+  {% if user_settings['imageQuality-switch'] %}
     <style>
       #viewer img { image-rendering: pixelated; }
       .viewer-img-zoom { image-rendering: pixelated; }
@@ -25,7 +25,7 @@
         <img id="upload-image"  title="Upload Media" class="menu-button" src="{{ url_for('static', filename='icons/uploadButton.png')}}" alt="Upload" />
       </label>
     </div>
-    <input type="file" id="upload-button" title="Upload" accept="image/png, image/jpeg" multiple />
+    <input type="file" id="upload-button" title="Upload" accept="image/png, image/jpeg, image/gif" multiple />
 
     <div id="selection-buttons">
       <div title="Select All" id="select-all-button" class="selection-button" onclick="selectAll()">
@@ -38,7 +38,7 @@
       </div>
 
       <div title="Delete" id="delete-button" class="selection-button" onclick="deleteImages()">
-        <img src="{{ url_for('static', filename='icons/deleteButton.png')}}" alt="Delete" />
+        <img src="{{ url_for('static', filename='icons/archive.png')}}" alt="Delete" />
       </div>
     </div>
   </div>
@@ -75,10 +75,12 @@
       createGalleryItem("{{ key.split(':')[1] }}", "{{ value }}");
     </script>
   {% endfor %}
-  <script type="text/javascript">
-    destroyLoadingScreen();
-  </script>
 </div>
 <div id="upload-queue"></div>
+
+<script type="text/javascript">
+  destroyLoadingScreen();
+  loadSettings(JSON.parse('{{ user_settings | tojson }}'));
+</script>
 
 {% endblock %}
