Reorganisation + archiving + recently deleted changes + image zoom speed

--- a/project/templates/recently_deleted.html
+++ b/project/templates/recently_deleted.html
@@ -5,7 +5,9 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/prism.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_bare.css') }}">
   <script src="{{ url_for('static', filename='js/format.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='js/file_bare.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/core.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/preview.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/context_menu.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/recently_deleted.js') }}" type="text/javascript"></script>
 {% endblock %}
 
