--- a/project/templates/file_manager.html
+++ b/project/templates/file_manager.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_bare.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_manager.css') }}">
   <script src="{{ url_for('static', filename='js/format.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='js/file_bare.js') }}" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='js/file_manager.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/preview.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/upload.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/core.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/context_menu.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/file_manager.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
