--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -2,7 +2,10 @@
 
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}">
-  <script src="{{ url_for('static', filename='js/gallery.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/gallery/gallery.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/gallery/upload.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/gallery/viewer.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/gallery/context_menu.js') }}" type="text/javascript"></script>
   {% if user_settings['imageQuality-switch'] %}
     <style>
       #viewer img { image-rendering: pixelated; }
