--- a/project/templates/all_files.html
+++ b/project/templates/all_files.html
@@ -8,6 +8,7 @@
   <script src="{{ url_for('static', filename='js/format.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/files/preview.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/files/upload.js') }}" type="text/javascript"></script>
+  <script src="{{ url_for('static', filename='js/files/functions.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/files/core.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/files/context_menu.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/files/file_manager.js') }}" type="text/javascript"></script>
